@@ -24,18 +24,22 @@ uname_args = -s -o -r -m -i
 
 [Git::GatherDir / @Author::KENTNL/Git::GatherDir]
 exclude_filename = LICENSE
+exclude_filename = Makefile.PL
+exclude_filename = META.json
 include_dotfiles = 1
 
 [License / @Author::KENTNL/License]
-
-[CopyFilesFromBuild / @Author::KENTNL/CopyLicense]
-copy = LICENSE
 
 [MetaJSON / @Author::KENTNL/MetaJSON]
 
 [MetaYAML / @Author::KENTNL/MetaYAML]
 
 [Manifest / @Author::KENTNL/Manifest]
+
+[CopyFilesFromBuild / @Author::KENTNL/CopyXBuild]
+copy = LICENSE
+copy = Makefile.PL
+copy = META.json
 
 [MetaTests / @Author::KENTNL/MetaTests]
 
