@@ -19,6 +19,8 @@ toolkit = eumm
 toolkit_hardness = soft
 bumpversions = 1
 copylicense = 1
+copymakefilepl = 1
+copymetajson = 1
 ;version_major = 0
 ;version_minor = 1
 ;version_rel_year = 2010
