@@ -3,6 +3,8 @@
 {{$NEXT}}
  [00 Major]
  - add copylicense attribute to support/create LICENSE in source tree.
+ - add copymakefilepl attribute that injects Makefile.PL in source tree
+ - add copymetajson attribute that injects META.json in source tree
 
 2.015000 2014-06-03T05:21:36Z
  [00 Major]
